--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 		"sameAs": []
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Page 1">
+    <meta property="og:title" content="Krishank Shah">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Page-1.html" data-home-page-title="Page 1" data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-982e"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="Page-1.html" data-home-page-title="Krishank Shah" data-path-to-root="./" data-include-products="true" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-982e"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="900" data-image-height="900">
           <img src="images/KMATSlogo1.png?rand=e594" class="u-logo-image u-logo-image-1">
         </a>
